--- a/public/views/addItem.html
+++ b/public/views/addItem.html
@@ -7,10 +7,26 @@
     <link rel="stylesheet" href="../styles/index.css">
     <title>Add Item</title>
 </head>
-<body class = 'colored centered'>
-    <h1 id='addingTo'>Adding to: company, warehouse</h1>
+<body class = 'grey centered'>
+    
+
+        <h1 id='addingTo'>Adding to: company, warehouse</h1>
+        
     <a href='/'>Cancel</a>
-    <form class='centered form' method='POST' action='/item'>
+    <form onsubmit="return confirm('Are you sure this information is correct?')" class='centered form' method='POST' action='/warehouse'>
+        <div>
+            <!-- Warehouse: <input  id="warehousename" type="text" name="warehousename" autocomplete="off"/> -->
+             <!-- THIS NEEDS TO AUTO-FILL LATER -->
+            Warehouse: <select name="warehousename" id="warehousename">
+                <option value="w1 - Chicago, IL">w1 - Chicago, IL</option>
+                <option value="w2 - Peoria, IL">w2 - Peoria, IL</option>
+                <option value="w3 - Dallas, TX">w3 - Dallas, TX</option>
+                <option value="w4 - Tampa, FL">w4 - Tampa, FL</option>
+                <option value="w5 - Jacksonville, FL">w5 - Jacksonville, FL</option>
+                <option value="w6 - New York, NY">w6 - New York, NY</option>
+              </select>
+        </div>
+        <br>
         <div>
             <label for="name">Item Name:</label>
             <input id="name" type="text" name="name" autocomplete="off"/>
@@ -21,19 +37,10 @@
         </div>
         <br>
         <div>
-            Pallets: <input type="number" name="size" autocomplete="off"/>
+            Pallets: <input type="number" name="pallets" autocomplete="off"/>
         </div>
         <br>
-        <div>
-            Department: 
-            <select name='department' id='department'>
-                <option value="GS">Gaskets and Seals</option>
-                <option value="HVAC">HVAC</option>
-                <option value="CM">Construction</option>
-            </select>
-        </div>
-        <br>
-        <input type="submit" value="Submit"/>
+        <input id="submit"type="submit" value="Submit"/>
     </form>
 </body>
 </html>
