--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -4,14 +4,34 @@
     margin: auto;
 }
 
-.colored{
+.at-top{
+    margin-top: 0vh;
+}
+
+.overflow{
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
+
+.arial{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.white{
     background-color:white;
 }
-.black{
-    background-color: black;
+.grey{
+    background-color: gray;
+}
+.lightgrey{
+    background-color: lightgray;
 }
 .spaced{
     align-items: stretch;
+}
+
+.stretched{
+    align-content: stretch;
 }
 
 .form{
@@ -22,20 +42,12 @@
 
 .grid{
     display: grid;
-    border: 2px solid black;
-    grid-template-columns: 20% 20% 20% 20% 20%;
+    grid-template-columns: 50% 50%;
     grid-template-rows: 20% 20% 20% 20% 20%;
     width: 100rem;
     height: 1000px;
 }
 
-.container{
-    text-align: center;
-    border: 1px solid black;
-    margin: auto;
-    width: 75%;
-    margin-top: 5vh;
-}
 
 .container-item{
     text-align: center;
@@ -44,7 +56,7 @@
     text-overflow: ellipsis;
     border: 1px solid black;
     margin: auto;
-    width: 100%;
-    height: 100%;
+    width: 75%;
+    height: 80%;
     padding:10%
 }
