--- a/public/views/index.html
+++ b/public/views/index.html
@@ -8,44 +8,44 @@
     <link rel="stylesheet" href="../styles/index.css">
     <link rel="stylesheet" href="../styles/custom.scss">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src='../scripts/itemScripts.js'></script>
+    <script src='../scripts/companyScripts.js'></script>
     <title>Home</title>
 </head>
-<body class='centered colored'></body>
-    <H1 id='warehouseid'>Warehouse Manager</H1>
+<body class='centered grey'></body>
 
-
-    <div>
-        <label for='Company'><b>Select a Company:</b></label>
-        <select name='Company' id='Company'>
-            <option value="Company1">Umbrella</option>
-            <option value="Company2">Weyland Yutani</option>
-            <option value="Company3">Hyperion</option>
-        </select>
-    </div>
-    <br>
-    <div class='spaced'>
-        <a href='/form'>add a new item to this warehouse</a>
-    </div>
-    <ul class="nav nav-tabs">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Warehouse 1</a>
+<nav class="navbar navbar-expand-lg navbar-light bg-warning" style='margin-top: 0vh;'>
+    <a class="navbar-brand" style="margin-left: 5vh" href="/"><b>Company</b> Inventory Management System</a></nav>
+    <!--<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Warehouse 2</a>
+          <a class="nav-link" href="#">Link</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Warehouse 3</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Dropdown
+          </a>
         </li>
       </ul>
+    </div>-->
+  </nav>
+
+    <H1 id='warehouseid' style='margin-top: 5vh;'><b>Companies</b></H1>
 
     <br>
-    <div class=''>
-        <div id='items' class='centered grid'></div>
-    </div>
+    
+        <div class='container'>
+            <div id='companies' class='row g-3'>
+                <div class='col-5'><b></b></div>
+                <div class='col-5 centered'></div>
+            </div>
+        </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
