--- a/public/views/addItem.html
+++ b/public/views/addItem.html
@@ -29,7 +29,7 @@
         <br>
         <div>
             <label for="name">Item Name:</label>
-            <input id="name" type="text" name="name" autocomplete="off"/>
+            <input oninput="this.value = this.value.toLowerCase()" id="name" type="text" name="name" autocomplete="off"/>
         </div>
         <br>
         <div>
