--- a/public/views/index.html
+++ b/public/views/index.html
@@ -14,28 +14,7 @@
 <body class='centered grey'></body>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-warning" style='margin-top: 0vh;'>
-    <a class="navbar-brand" style="margin-left: 5vh" href="/"><b>Company</b> Inventory Management System</a></nav>
-
-    <!--<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown
-          </a>
-        </li>
-      </ul>
-    </div>-->
-  </nav>
+    <a class="navbar-brand" style="margin-left: 5vh" href="/"><b>Corporation inc.</b></a></nav>
 
     <H1 id='warehouseid' style='margin-top: 5vh;'><b>Companies</b></H1>
 
