--- a/public/views/addItem.html
+++ b/public/views/addItem.html
@@ -8,9 +8,12 @@
     <title>Add Item</title>
 </head>
 <body class = 'grey centered'>
-    
 
-        <h1 id='addingTo'>Adding to: company, warehouse</h1>
+    <nav class="navbar navbar-expand-lg navbar-light bg-warning" style='margin-top: 0vh;'>
+        <a class="navbar-brand" style="margin-left: 5vh" href="/"><b>Corporation inc.</b></a></nav>
+      
+
+    <h1 id='addingTo'>Adding to: company, warehouse</h1>
         
     <a href='/'>Cancel</a>
     <form onsubmit="return confirm('Are you sure this information is correct?')" class='centered form' method='POST' action='/warehouse'>
@@ -29,7 +32,7 @@
         <br>
         <div>
             <label for="name">Item Name:</label>
-            <input oninput="this.value = this.value.toLowerCase()" id="name" type="text" name="name" autocomplete="off"/>
+            <input id="name" type="text" name="name" autocomplete="off"/>
         </div>
         <br>
         <div>
@@ -42,5 +45,7 @@
         <br>
         <input id="submit"type="submit" value="Submit"/>
     </form>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
