--- a/public/views/warehouses.html
+++ b/public/views/warehouses.html
@@ -20,7 +20,7 @@
 <body class='centered colored grey'></body>
   
     <nav class="navbar navbar-expand-lg navbar-light bg-warning" style='margin-top: 0vh;'>
-      <a class="navbar-brand" style="margin-left: 5vh" href="/"><b>Company</b> Inventory Management System</a></nav>
+      <a class="navbar-brand" style="margin-left: 5vh" href="/"><b>Corporation inc.</b> </a></nav>
 
     <H1 id='company-name' class='arial' style='margin-top: 5vh;'></H1>
 
@@ -32,16 +32,22 @@
       </div>
   </div>
     <br>
-    
     <div class="container">
       <div class="row white">
-
-        <ul id='warehouse-tabs' class="nav nav-tabs">
+        
+      <ul id='warehouse-tabs' class="nav nav-tabs" role="tablist">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">All Warehouses</a>
+            <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true" style="color: black">All Warehouses</button>
           </li>
         </ul>
+
         <div>.</div>
+        <div class="tab-content" id="myTabContent">
+         <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">All Warehouses</div>
+        </div>
+        <div>.</div>
+        
+        
         
         <table style='table-layout: fixed;' class=" table table-striped">
           <thead>
@@ -55,17 +61,11 @@
             </tr>
           </thead>
           <tbody id='inventory'>
-            
+    
           </tbody>
         </table>
       
-
-
       </div>
-
-      
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
