--- a/public/views/addItem.html
+++ b/public/views/addItem.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/index.css">
     <title>Add Item</title>
+    <script>
+        
+         function resetForm(){
+            document.getElementById('form').reset();
+         }
+   
+    </script>
 </head>
 <body class = 'grey centered'>
 
@@ -16,7 +23,7 @@
     <h1 id='addingTo'>Adding to: company, warehouse</h1>
         
     <a href='/'>Cancel</a>
-    <form onsubmit="return confirm('Are you sure this information is correct?')" class='centered form' method='POST' action='/warehouse'>
+    <form onsubmit="return confirm('Are you sure this information is correct?'); reset()" class='centered form' method='POST' action='/warehouse' id='form'>
         <div>
             <!-- Warehouse: <input  id="warehousename" type="text" name="warehousename" autocomplete="off"/> -->
              <!-- THIS NEEDS TO AUTO-FILL LATER -->
@@ -45,6 +52,8 @@
         <br>
         <input id="submit"type="submit" value="Submit"/>
     </form>
+    <br>
+    <div class='form-notification'>Item added successfully!</div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
