--- a/public/views/warehouses.html
+++ b/public/views/warehouses.html
@@ -35,6 +35,9 @@
     <div class="container">
       <div class="row white">
         
+
+      
+
       <ul id='warehouse-tabs' class="nav nav-tabs" role="tablist">
           <li class="nav-item">
             <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true" style="color: black">All Warehouses</button>
@@ -47,8 +50,8 @@
         </div>
         <div>.</div>
         
-        
-        
+        <div id='table-container'>
+        <div id='database-table'>
         <table style='table-layout: fixed;' class=" table table-striped">
           <thead>
             <tr>
@@ -64,7 +67,10 @@
     
           </tbody>
         </table>
-      
+
+      </div><!--database-table-->
+      </div>
+
       </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
