--- a/public/views/addItem.html
+++ b/public/views/addItem.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/index.css">
+    <link rel="stylesheet" href="../styles/custom.scss">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Add Item</title>
     <script>
         
@@ -20,9 +22,8 @@
         <a class="navbar-brand" style="margin-left: 5vh" href="/"><b>Corporation inc.</b></a></nav>
       
 
-    <h1 id='addingTo'>Adding to: company, warehouse</h1>
-        
-    <a href='/'>Cancel</a>
+    <h1 style='margin-top: 5vh;' id='addingTo'>Add items to inventory</h1>
+    <a class='col-5 centered' href='/'><button  style='margin-top: 5vh;' type="button" class='btn btn-danger'>Back</button></a>
     <form onsubmit="return confirm('Are you sure this information is correct?'); reset()" class='centered form' method='POST' action='/warehouse' id='form'>
         <div>
             <!-- Warehouse: <input  id="warehousename" type="text" name="warehousename" autocomplete="off"/> -->
