--- a/public/views/addItem.html
+++ b/public/views/addItem.html
@@ -22,8 +22,8 @@
         <a class="navbar-brand" style="margin-left: 5vh" href="/"><b>Corporation inc.</b></a></nav>
       
 
-    <h1 style='margin-top: 5vh;' id='addingTo'>Add items to inventory</h1>
-    <a class='col-5 centered' href='/'><button  style='margin-top: 5vh;' type="button" class='btn btn-danger'>Back</button></a>
+    <h1 style='margin-top: 5vh;' id='addingTo'><b>add new item</b></h1>
+    <button style='margin-top: 5vh;' type="button" class='btn btn-danger' onclick="history.go(-1);">Back</button>
     <form onsubmit="return confirm('Are you sure this information is correct?'); reset()" class='centered form' method='POST' action='/warehouse' id='form'>
         <div>
             <!-- Warehouse: <input  id="warehousename" type="text" name="warehousename" autocomplete="off"/> -->
@@ -54,7 +54,7 @@
         <input id="submit"type="submit" value="Submit"/>
     </form>
     <br>
-    <div class='form-notification'>Item added successfully!</div>
+    <div class='form-notification'></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
