--- a/public/views/warehouses.html
+++ b/public/views/warehouses.html
@@ -28,7 +28,7 @@
     <div class='container'>
       <div class='row g-3'>
         <a class='col-5 centered' href='/'><button type="button" class='btn btn-light'>Home</button></a>
-          <a class='col-5 centered' href='/form'><button type="button" class='btn btn-danger'>Add inventory</button></a>
+          <a class='col-5 centered' href='/add'><button type="button" class='btn btn-danger'>Add inventory</button></a>
       </div>
   </div>
     <br>
@@ -40,7 +40,7 @@
 
       <ul id='warehouse-tabs' class="nav nav-tabs" role="tablist">
           <li class="nav-item">
-            <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true" style="color: black">All Warehouses</button>
+            <button onclick="filterTable('')" class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true" style="color: black">All Warehouses</button>
           </li>
         </ul>
 
