--- a/public/views/addCompany.html
+++ b/public/views/addCompany.html
@@ -6,19 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Add Item</title>
+    <title>Add Company</title>
     <script>
-         function resetForm(){
-
-            document.getElementById('name').value = document.getElementById('name').value.toLowerCase();
-
+        function resetForm(){
             setTimeout(()=>{
-                document.getElementById('form').reset(); 
-            }, 1000);  
-         }
-   
+            document.getElementById('form').reset();}, 1000);  
+        }
     </script>
-    <script src='../scripts/addItemScript.js'></script>
 </head>
 <body class = 'grey centered'>
 
@@ -26,26 +20,18 @@
         <a class="navbar-brand" style="margin-left: 5vh" href="/"><b>Corporation inc.</b></a></nav>
       
 
-    <h1 style='margin-top: 5vh;' id='addingTo'><b>. . .</b></h1>
-    <button style='margin-top: 5vh;' type="button" class='btn btn-danger' onclick="history.go(-1);">Back</button>
+    <h1 style='margin-top: 5vh;'><b>New Company</b></h1>
+    <a href='/'><button style='margin-top: 5vh;' type="button" class='btn btn-danger'>Back</button></a>
 
-    <form onsubmit="resetForm();" class='centered form' method='POST' action='/warehouse' id='form'>
-        <div>
-            Warehouse: <select name="warehousename" id="warehousename">
-              </select>
-        </div>
+    <form onsubmit="resetForm();" class='centered form' method='POST' action='/companies' id='form'>
         <br>
         <div>
-            <label for="name">Item Name:</label>
+            <label for="name">Name:</label>
             <input id="name" type="text" name="name" autocomplete="off" required/>
         </div>
         <br>
         <div>
-            Quantity: <input id='quantity' type="number" name="quantity" autocomplete="off" required/>
-        </div>
-        <br>
-        <div>
-            Pallets: <input id='pallets' type="number" name="pallets" autocomplete="off" required/>
+            Motto/Desc: <input id='desc' type="text" name="desc" autocomplete="off" required/>
         </div>
         <br>
         <input id="submit"type="submit" value="Submit"/>
