--- a/public/views/notFound.html
+++ b/public/views/notFound.html
@@ -7,22 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src='../scripts/companyScripts.js'></script>
-    <title>Home</title>
+    <title>Not found</title>
 </head>
 <body class='centered grey'></body>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-warning" style='margin-top: 0vh;'>
     <a class="navbar-brand" style="margin-left: 5vh" href="/"><b>Corporation inc.</b></a></nav>
 
-    <H1 id='warehouseid' style='margin-top: 5vh;'><b>Companies</b></H1>
-
-    <br>
-    
-        <div class='container'>
-                <div id='companies' class='row g-3'>
-                </div>
-        </div>
+    <H1 style='margin-top: 5vh;'><b>404</b></H1>
+    <H2 style='margin-top: 5vh;'><b>Page not found.</b></H2>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
