--- a/public/views/addItem.html
+++ b/public/views/addItem.html
@@ -31,7 +31,7 @@
 
     <form onsubmit="resetForm();" class='centered form' method='POST' action='/warehouse' id='form'>
         <div>
-            Warehouse: <select name="warehousename" id="warehousename">
+            Warehouse: <select name="warehousename" id="warehousename" required>
               </select>
         </div>
         <br>
