--- a/public/views/warehouses.html
+++ b/public/views/warehouses.html
@@ -16,7 +16,7 @@
 
       
     </script>
-    <title>Home</title>
+    <title>Warehouses</title>
 </head>
 <body class='centered colored grey'></body>
   
