--- a/public/views/addItem.html
+++ b/public/views/addItem.html
@@ -13,8 +13,6 @@
             //clean data
             document.getElementById('name').value = document.getElementById('name').value.toLowerCase();
             document.getElementById('name').value = document.getElementById('name').value.replaceAll('/','');
-
-
             setTimeout(()=>{
                 document.getElementById('form').reset(); 
             }, 1000);  
@@ -26,15 +24,15 @@
 <body class = 'grey centered'>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-warning" style='margin-top: 0vh;'>
-        <a class="navbar-brand" style="margin-left: 5vh" href="/"><b>Corporation inc.</b></a></nav>
+        <a class="navbar-brand" style="margin-left: 5vh" href="/"><b>Corporation inc.</b></a>
+    </nav>
       
     <h1 style='margin-top: 5vh;' id='addingTo'><b>. . .</b></h1>
     <button style='margin-top: 5vh;' type="button" class='btn btn-danger' onclick="history.go(-1);">Back</button>
-
+    <div class='centered'>
     <form onsubmit="resetForm();" class='centered form' method='POST' action='/warehouse' id='form'>
         <div>
-            Warehouse: <select name="warehousename" id="warehousename" required>
-              </select>
+            Warehouse: <select name="warehousename" id="warehousename" required></select>
         </div>
         <br>
         <div>
@@ -51,7 +49,7 @@
         </div>
         <br>
         <input id="submit"type="submit" value="Submit"/>
-    </form>
+    </form></div>
     <br>
     <div class='form-notification'></div>
 
