--- a/public/views/warehouses.html
+++ b/public/views/warehouses.html
@@ -21,14 +21,14 @@
 <body class='centered colored grey'></body>
   
     <nav class="navbar navbar-expand-lg navbar-light bg-warning" style='margin-top: 0vh;'>
-      <a class="navbar-brand" style="margin-left: 5vh" href="/"><b>Corporation inc.</b> </a></nav>
+      <a class="navbar-brand logo" style="margin-left: 5vh" href="/"><b>Corporation inc.</b> </a></nav>
 
     <H1 id='company-name' class='arial' style='margin-top: 5vh;'>. . .</H1>
 
     <br>
     <div class='container'>
       <div class='row g-3'>
-          <div class='col-5 centered'><a href='/'><button type="button" class='btn btn-light'>Home</button></a></div>
+          <div class='col-5 centered'><a href='/'><button type="button" class='btn btn-light shadowed'>Home</button></a></div>
           <div id='addItemButton' class='col-5 centered'></div>
           <!--<a href='/add'><button type="button" class='btn btn-danger'>Add inventory</button></a>-->
       </div>
