--- a/public/views/addWarehouse.html
+++ b/public/views/addWarehouse.html
@@ -19,11 +19,11 @@
 <body class = 'grey centered'>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-warning" style='margin-top: 0vh;'>
-        <a class="navbar-brand" style="margin-left: 5vh" href="/"><b>Corporation inc.</b></a></nav>
+        <a class="navbar-brand logo" style="margin-left: 5vh" href="/"><b>Corporation inc.</b></a></nav>
       
 
     <h1 style='margin-top: 5vh;'><b>New Warehouse</b></h1>
-    <a href='/'><button style='margin-top: 5vh;' type="button" class='btn btn-danger'>Back</button></a>
+    <button style='margin-top: 5vh;' type="button" class='btn btn-danger shadowed' onclick="history.go(-1);">Back</button>
 
     <form onsubmit="resetForm();" class='centered form' method='POST' action='/forms' id='form'>
         <br>
