--- a/public/views/index.html
+++ b/public/views/index.html
@@ -13,7 +13,7 @@
 <body class='centered grey'></body>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-warning" style='margin-top: 0vh;'>
-    <a class="navbar-brand" style="margin-left: 5vh" href="/"><b>Corporation inc.</b></a></nav>
+    <a class="navbar-brand logo" style="margin-left: 5vh" href="/"><b>Corporation inc.</b></a></nav>
 
     <H1 id='warehouseid' style='margin-top: 5vh;'><b>Companies</b></H1>
 
