--- a/public/views/notFound.html
+++ b/public/views/notFound.html
@@ -12,7 +12,7 @@
 <body class='centered grey'></body>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-warning" style='margin-top: 0vh;'>
-    <a class="navbar-brand" style="margin-left: 5vh" href="/"><b>Corporation inc.</b></a></nav>
+    <a class="navbar-brand logo" style="margin-left: 5vh" href="/"><b>Corporation inc.</b></a></nav>
 
     <H1 style='margin-top: 5vh;'><b>404</b></H1>
     <H2 style='margin-top: 5vh;'><b>Page not found.</b></H2>
