--- a/public/views/warehouses.html
+++ b/public/views/warehouses.html
@@ -34,7 +34,7 @@
       </div>
   </div>
     <br>
-    <div class="container">
+    <div class="container bordered">
       <div class="row white">
 
       <ul id='warehouse-tabs' class="nav nav-tabs" role="tablist">
