--- a/public/views/addCompany.html
+++ b/public/views/addCompany.html
@@ -24,19 +24,19 @@
     <a href='/'><button style='margin-top: 5vh;' type="button" class='btn btn-danger shadowed'>Back</button></a>
 
     <form onsubmit="resetForm();" class='centered form' method='POST' action='/companies' id='form'>
-        <br>
-        <div>
+        
+        <div class='lowered'>
             <label for="name">Name:</label>
             <input id="name" type="text" name="name" autocomplete="off" required/>
         </div>
-        <br>
-        <div>
+        
+        <div class='lowered'>
             Motto/Desc: <input id='desc' type="text" name="desc" autocomplete="off" required/>
         </div>
-        <br>
-        <input id="submit"type="submit" value="Submit"/>
+        
+        <input class='lowered' id="submit"type="submit" value="Submit"/>
     </form>
-    <br>
+    
     <div class='form-notification'></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
