--- a/public/views/addItem.html
+++ b/public/views/addItem.html
@@ -13,6 +13,9 @@
             //clean data
             document.getElementById('name').value = document.getElementById('name').value.toLowerCase();
             document.getElementById('name').value = document.getElementById('name').value.replaceAll('/','');
+            document.getElementById('quantity').value = Math.abs(document.getElementById('quantity').value);
+            document.getElementById('pallets').value = Math.abs(document.getElementById('pallets').value);
+
             setTimeout(()=>{
                 const selectedWarehouse = document.getElementById('warehousename').value;
                 document.getElementById('form').reset(); 
@@ -36,23 +39,23 @@
         <div>
             Warehouse: <select name="warehousename" id="warehousename" required></select>
         </div>
-        <br>
-        <div>
+        
+        <div class='lowered'> 
             <label for="name">Item Name:</label>
             <input id="name" type="text" name="name" autocomplete="off" required/>
         </div>
-        <br>
-        <div>
+        
+        <div class='lowered'>
             Quantity: <input id='quantity' type="number" name="quantity" autocomplete="off" required/>
         </div>
-        <br>
-        <div>
+       
+        <div class='lowered'>
             Pallets: <input id='pallets' type="number" name="pallets" autocomplete="off" required/>
         </div>
-        <br>
-        <input id="submit"type="submit" value="Submit"/>
+        
+        <input class='lowered' id="submit"type="submit" value="Submit"/>
     </form></div>
-    <br>
+    
     <div class='form-notification'></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
