--- a/public/views/addItem.html
+++ b/public/views/addItem.html
@@ -8,21 +8,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Add Item</title>
     <script>
-         function resetForm(){
-
-            //clean data
-            document.getElementById('name').value = document.getElementById('name').value.toLowerCase();
-            document.getElementById('name').value = document.getElementById('name').value.replaceAll('/','');
-            document.getElementById('quantity').value = Math.abs(document.getElementById('quantity').value);
-            document.getElementById('pallets').value = Math.abs(document.getElementById('pallets').value);
-
-            setTimeout(()=>{
-                const selectedWarehouse = document.getElementById('warehousename').value;
-                document.getElementById('form').reset(); 
-                document.getElementById('warehousename').value = selectedWarehouse;
-            }, 1000);  
-         }
-   
     </script>
     <script src='../scripts/addItemScript.js'></script>
 </head>
@@ -35,7 +20,7 @@
     <h1 style='margin-top: 5vh;' id='addingTo'><b>. . .</b></h1>
     <button style='margin-top: 5vh;' type="button" class='btn btn-danger shadowed' onclick="history.go(-1);">Back</button>
     <div class='centered'>
-    <form onsubmit="resetForm();" class='centered form' method='POST' action='/warehouse' id='form'>
+    <form class='centered form' id='form'>
 
         <div>
             Warehouse: <select name="warehousename" id="warehousename" required></select>
@@ -50,11 +35,14 @@
         <div class='lowered'>
             Pallets: <input id='pallets' type="number" name="pallets" autocomplete="off" required/>
         </div>
-        <input class='lowered' id="submit"type="submit" value="Submit"/>
         
+        <button type="button" class='btn btn-danger shadowed lowered' onclick="resetForm()">submit</button>
+
+        <!--<input class='lowered' id="submit"type="submit" value="Submit"/>-->
+
     </form></div>
     
-    <div class='form-notification'></div>
+    <div id='form-notification' class='lowered'>. . .</div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
