--- a/public/views/addItem.html
+++ b/public/views/addItem.html
@@ -35,8 +35,8 @@
         <div class='lowered'>
             Pallets: <input id='pallets' type="number" name="pallets" autocomplete="off" required/>
         </div>
-        
-        <button type="button" class='btn btn-danger shadowed lowered' onclick="resetForm()">submit</button>
+
+        <button type="button" class='btn btn-danger shadowed lowered' onclick="submitForm()">submit</button>
 
         <!--<input class='lowered' id="submit"type="submit" value="Submit"/>-->
 
