--- a/public/views/addWarehouse.html
+++ b/public/views/addWarehouse.html
@@ -8,13 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src='../scripts/addWarehouseScript.js'></script>
     <title>New Warehouse</title>
-    <script></script>
-    <script>
-        function resetForm(){
-            setTimeout(()=>{
-            document.getElementById('form').reset();}, 1000);  
-        }
-    </script>
+    <script src='../scripts/addWarehouseScript.js'></script>
 </head>
 <body class = 'grey centered'>
 
@@ -41,10 +35,10 @@
             <input id="capacity" type="number" name="capacity" autocomplete="off" required/>
         </div>
         
-        <input class='lowered' id="submit"type="submit" value="Submit"/>
+        <button type="button" class='btn btn-danger shadowed lowered' onclick="submitForm()">submit</button>
     </form>
     <br>
-    <div class='form-notification'></div>
+    <div id='form-notification' class='lowered'>. . .</div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
